# PySynClient

./: .gitignore  README.md  pyproject.toml
pysynclient/: __init__.py
pysynclient/client/: server_paths.py
test/: test_server_paths.py
