[tool.poetry]
name = "pysynclient"
version = "0.1.0"
description = "Automatically detects the location of the synology drive client folders and returns its parent location."
authors = ["Dominik Braun <dome.braun@fau.de>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pywin32 = "^308"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.6"
rinohtype = "^0.5.5"
furo = "^2024.7.18"
sphinx-gallery = "^0.16.0"
enum-tools = "^0.12.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
